--- a/.gitignore
+++ b/.gitignore
@@ -301,3 +301,5 @@ TSWLatexianTemp*
 #*Notes.bib
 
 venv/
+/ceng336/the1/starting-project/the1.X/build/
+/ceng336/the1/starting-project/the1.X/dist/
