--- a/ceng336/the1/starting-project/the1.X/nbproject/Makefile-genesis.properties
+++ b/ceng336/the1/starting-project/the1.X/nbproject/Makefile-genesis.properties
@@ -1,12 +1,12 @@
 #
-#Sat Mar 25 11:18:39 EET 2023
+#Sun Mar 26 21:53:06 EET 2023
 default.languagetoolchain.version=2.30
-default.Pack.dfplocation=/opt/microchip/mplabx/v5.45/packs/Microchip/PIC18Fxxxx_DFP/1.2.26
+default.Pack.dfplocation=
 conf.ids=default
 default.languagetoolchain.dir=/opt/microchip/xc8/v2.30/pic-as/bin
-host.id=1amu-1ikb-n2
+host.id=2b75-7f9u-rd
 configurations-xml=89a8077e6832a2b5b85fccf738afefb5
 default.com-microchip-mplab-nbide-toolchainPICASM-PICASMLanguageToolchain.md5=12dee8777de28f24b1b2ff6904a03143
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=4e1c703e057ce3824a620f2a747a6f88
-proj.dir=/home/bs2020/e2521581/GitHub/semester6/ceng336/the1/starting-project/the1.X
+proj.dir=/home/emre/GitHub/semester6/ceng336/the1/starting-project/the1.X
 host.platform=linux
