add tar command

--- a/ceng334/hw1/Makefile
+++ b/ceng334/hw1/Makefile
@@ -1,2 +1,5 @@
-bgame: bgame.cpp
+bgame: bgame.cpp logging.c logging.h message.c message.h
 	g++ -g bgame.cpp logging.c logging.h message.c message.h -o bgame
+
+tar: bgame.cpp logging.c logging.h message.c message.h Makefile
+	tar -cf e2521581.tar.gz bgame.cpp logging.c logging.h message.c message.h Makefile
