--- a/ceng334/hw1/Makefile
+++ b/ceng334/hw1/Makefile
@@ -1,5 +1,13 @@
-bgame: bgame.cpp logging.c logging.h message.c message.h
-	g++ -g bgame.cpp logging.c logging.h message.c message.h -o bgame
+SRCS = bgame.cpp logging.c logging.h message.c message.h
 
-tar: bgame.cpp logging.c logging.h message.c message.h Makefile
-	tar -cf e2521581.tar.gz bgame.cpp logging.c logging.h message.c message.h Makefile
+bgame: $(SRCS)
+	g++ $(SRCS) -o bgame
+
+tar: $(SRCS) Makefile
+	tar -cf e2521581.tar.gz bgame.cpp Makefile
+	@echo shell($?)
+
+test: tar
+	tar -xf e2521581.tar.gz
+	g++ $(SRCS) -o bgame
+	@echo "Last command $(.SHELLSTATUS)"
