--- a/ceng334/hw1/Makefile
+++ b/ceng334/hw1/Makefile
@@ -1,5 +1,6 @@
 SRCS = bgame.cpp logging.c logging.h message.c message.h
 TARFILE = e2521581.tar.gz
+INPUTFILE = input1.txt
 
 bgame: $(SRCS)
 	g++ $(SRCS) -o bgame
@@ -7,6 +8,7 @@ bgame: $(SRCS)
 tar: $(SRCS) Makefile
 	tar -cf $(TARFILE) bgame.cpp Makefile
 
-test: tar bgame
+test: tar
 	tar -xf $(TARFILE)
-	./bgame
+	make
+	./bgame < testcases/$(INPUTFILE)
