--- a/ceng334/hw2/Makefile
+++ b/ceng334/hw2/Makefile
@@ -1,9 +1,10 @@
-SRCS = hw2.cpp matrix.hpp hw2_output.c hw2_output.h
+SRCS = hw2.cpp matrix.cpp hw2_output.c
+HEADERS = matrix.hpp hw2_output.h
 TARFILE = hw2.tar.gz
 
 all: hw2
 
-hw2: $(SRCS)
+hw2: $(SRCS) $(HEADERS)
 	g++ -pthread $(SRCS) -o hw2
 
 tar: $(TARFILE)
